# glasgow-cs-analytics

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cs-data/: Cargo.toml
cs-data/src/: glasgow_data.rs  lib.rs  order_data.rs  production_data.rs
example-data/: fulfillment-data.csv  production-data.csv
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs
server/templates/: base.html  index.html  order.html
src/: glasgow_data.rs  main.rs  order_data.rs
