[package]
name = "cs-data"
version = "0.1.0"
license = "MIT or Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
csv = "1.3"
serde = { version = "1.0.55", features = ["derive"] }
